Added Valiation Summary, Added Data Annotation, Fixed Password and Retype Password Visibility Issue

--- a/Pages/CreateUserAccessControl.cshtml
+++ b/Pages/CreateUserAccessControl.cshtml
@@ -32,6 +32,8 @@
                         </div>
                     </div>
                     <div class="card-body">
+                        <!-- Validation Summary -->
+                        <div asp-validation-summary="All" class="text-danger fw-bold"></div>
 
                         <div class="row ms-2">
                             <!-- Add radio buttons for Default View and Top View -->
