--- a/Pages/DeleteEntityRecord.cshtml
+++ b/Pages/DeleteEntityRecord.cshtml
@@ -83,6 +83,9 @@
                         </div>
                     </div>
                     <div class="card-body">
+                        <!-- Validation Summary -->
+                        <div asp-validation-summary="All" class="text-danger fw-bold"></div>
+
                         <!-- Details Form -->
                         <div id="detailsForm">
                             <!-- Dynamic form content will be inserted here -->
