--- a/Pages/UpdateCategory.cshtml
+++ b/Pages/UpdateCategory.cshtml
@@ -32,6 +32,9 @@
                         </div>
                     </div>
                     <div class="card-body">
+                        <!-- Validation Summary -->
+                        <div asp-validation-summary="All" class="text-danger fw-bold"></div>
+
                         <!-- Profile Dropdown -->
                         <div class="mb-3">
                             <label asp-for="SelectedPageCategory.CategoryName" class="form-label">Select Category</label>
