--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -292,5 +292,6 @@
     <script src="~/js/chart/highcharts-more.js"></script>
     <script src="~/lib/leaflet/leaflet.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    @await Html.PartialAsync("_Notification")
 </body>
 </html> 
