--- a/Pages/EditSettings.cshtml
+++ b/Pages/EditSettings.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
-    <form id="updateSettingsForm" asp-page-handler="Submit" enctype="multipart/form-data" method="post">
+    <form method="post" enctype="multipart/form-data">
         <div id="updateSettingsSection" class="container form-control pt-4 pb-2 mt-3" style="height:auto; background-color: #f4f0ec; width:50%;">
             <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around; height:auto; flex-direction:column; ">
                 <div class="row pb-1 pt-2">
@@ -43,9 +43,10 @@
                                             <i class="ion ion-android-camera" style="font-size: 1.5rem;"></i>
                                         </label>
                                     </div>
-                                    <span asp-validation-for="SettingsData.SettingPhotoFile" class="text-danger fw-bold"></span>
                                 }
                             </div>
+                            <br />
+                            <span asp-validation-for="SettingsData.SettingPhotoFile" class="text-danger fw-bold"></span>
                             <h5 class="fs-16 mb-1">@Model.SettingsData.SettingName</h5>
                             <p class="text-muted mb-0">@Model.SettingsData.SettingEmail (@Model.SettingsData.SettingUsername)</p>
                         </div>
@@ -57,7 +58,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-id-badge"></i></span>
                                 </div>
-                                <input type="text" asp-for="SettingsData.SettingId" class="form-control" readonly />
+                                <input type="text" asp-for="SettingsData.SettingId" class="form-control" disabled />
                             </div>
                             <span asp-validation-for="SettingsData.SettingId" class="text-danger fw-bold"></span>
                         </div>
@@ -69,9 +70,9 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-address-card"></i></span>
                                 </div>
-                                <input type="text" asp-for="SettingsData.SettingUsername" placeholder="User Name" class="form-control" data-field="Username"/>
+                                <input type="text" asp-for="SettingsData.SettingUsername" placeholder="User Name" class="form-control"/>
                             </div>
-                            <span asp-validation-for="SettingsData.SettingUsername" id="Username-validation" class="text-danger fw-bold"></span>
+                            <span asp-validation-for="SettingsData.SettingUsername" class="text-danger fw-bold"></span>
                         </div>
 
                         <!-- FullName Field -->
@@ -93,9 +94,9 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                                 </div>
-                                <input type="text" asp-for="SettingsData.SettingEmail" placeholder="Email Address" class="form-control" data-field="Email" />
+                                <input type="text" asp-for="SettingsData.SettingEmail" placeholder="Email Address" class="form-control" />
                             </div>
-                            <span asp-validation-for="SettingsData.SettingEmail" id="Email-validation" class="text-danger fw-bold"></span>
+                            <span asp-validation-for="SettingsData.SettingEmail" class="text-danger fw-bold"></span>
                         </div>
 
                         <!-- Change Password Section -->
