--- a/Pages/Dashboard.cshtml
+++ b/Pages/Dashboard.cshtml
@@ -20,7 +20,11 @@
                 </div>
             </div>
             <div class="card-body align-items-center justify-content-center" style="height:400px; position: relative; display:flex;">
-                <div id="draggableText" class="text-center fw-bolder draggable" style="font-size:1.5rem;color:#333;text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);">
+                <div id="draggableText" class="text-center fw-bolder draggable" style="font-size:1.5rem;">
+                    <!--
+                        <div id="draggableText" class="text-center fw-bolder draggable" style="font-size:1.5rem;color:#333;text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);">
+                    -->
+                
                     SPIDER | Enterprise Monitoring Tools
                 </div>
             </div>
