--- a/Pages/CreateCategory.cshtml
+++ b/Pages/CreateCategory.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
-    <form asp-page-handler="Submit" id="createCategoryForm">
+    <form method="post" id="createCategoryForm">
         <div id="createCategoryDiv" class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:70%;">
             <input type="hidden" id="SelectedPagesJson" name="SelectedPagesJson" />
 
@@ -40,9 +40,9 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-atom"></i></span>
                                 </div>
-                                <input asp-for="SelectedPageCategory.CategoryName" placeholder="Category Name" class="form-control" data-field="CatagoryName" />
+                                <input asp-for="SelectedPageCategory.CategoryName" placeholder="Category Name" class="form-control" />
                             </div>
-                            <span asp-validation-for="SelectedPageCategory.CategoryName" class="text-danger fw-bold" id="CatagoryName-validation"></span>
+                            <span asp-validation-for="SelectedPageCategory.CategoryName" class="text-danger fw-bold"></span>
                         </div>
                         <!-- Checkboxes to select pages -->
                         <div class="mb-3">
@@ -56,7 +56,7 @@
                             <div class="row">
                                 <div class="col-2"></div>
                                 <div class="col-3 me-4">
-                                    <button type="submit" class="btn create-btn" style="width:140px;">Create</button>
+                                    <button type="submit" onclick="prepareFormSubmission()" class="btn create-btn" style="width:140px;">Create</button>
                                 </div>
                                 <div class="col-4 ms-3">
                                     <a asp-page="/Dashboard" class="btn btn-secondary" style="width:180px;"> Back to Dashboard</a>
